Bullet points for the evaluation section

--- a/SubmissionCarlDavid.ipynb
+++ b/SubmissionCarlDavid.ipynb
@@ -401,10 +401,8 @@
    "source": [
     "<span style=\"color:blue\">\n",
     "    \n",
-    "## On the actor and critic network\n",
+    "## Training of the Agents\n",
     "    \n",
-    "- 2 heads, CNN or MLP output dfims\n",
-    "\n",
     "For both of these executions, we ran it using the suggested 500000 timesteps, which took an entire night. The resulting agents are the ones stored in the folders *best_models* which we will go over later in the Evaluation section.\n",
     "\n",
     "In case we want a test run of these, and to show a simple output of how the system is training in our Notebook, the following code and output is simply training all of them with a low number of time_steps (10000). \n",
@@ -738,16 +736,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "<span style=\"color:blue\">\n",
-    "    \n",
-    "## On the actor and critic network\n",
-    "    \n",
-    "- Only difference in dimension\n",
+    "        \n",
+    "The difference we can see now comparing the policies is that we are using CNNs (Conv2d) and takes into account the 64x64 dimension of the input images.\n",
     "\n",
     "</span>"
    ]
@@ -782,7 +776,14 @@
     "id": "s33dR-mgQfo4"
    },
    "source": [
-    "Train the model for a large number of timesteps (500,000 timesteps will probably work well)."
+    "Train the model for a large number of timesteps (500,000 timesteps will probably work well).\n",
+    "\n",
+    "<span style=\"color:blue\">\n",
+    "        \n",
+    "Here we do it only for 10000 timesteps as mentioned before, the result of training it using 500000 timesteps can be seen in the evaluation section.\n",
+    "\n",
+    "</span>\n",
+    "\n"
    ]
   },
   {
@@ -1441,7 +1442,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "modelPath = \"./best_modelsC\"\n",
+    "modelPath = \"CNN\"\n",
+    "img = \"4Stack\"\n",
+    "agent, env = loadAgent(modelPath, policy, img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- if we run sometimes 800 well\n",
+    "\n",
+    "best are MLP_4stackpc1, CNN4stackPC1, MLPstackPC2 and CNN4stackPC2\n",
+    "\n",
+    "load these \n",
+    "\n",
+    "Often times the best model reached before 500k, then it "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1730,7 +1749,7 @@
     }
    ],
    "source": [
-    "agent.learn(total_timesteps=50000, callback=eval_callback)"
+    "agent.learn(total_timesteps=100000, callback=eval_callback)"
    ]
   },
   {
@@ -1806,36 +1825,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's hard to say whether it would perform better, but it seems to train significantly faster than the others.\n",
-    "\n",
-    "Furthermore, we weren't very user about using stacked images with these, adding a final call to VecFrameStack:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Multi-environment observation space shape: (64, 64, 1)\n",
-      "Stacked multi-environment observation space shape: (64, 64, 4)\n"
-     ]
-    }
-   ],
-   "source": [
-    "multi_env_stacked = sb3.common.vec_env.VecFrameStack(multi_env, n_stack=4)\n",
-    "print('Multi-environment observation space shape:', multi_env.observation_space.shape)\n",
-    "print('Stacked multi-environment observation space shape:', multi_env_stacked.observation_space.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This seems to show an observation space of 64x64x4 instead of just 64x64x1, but we weren't very sure about this because we would like to have each environment with 4 stacked images, instead of calling this at the end when we already have the vectorized 4 environments (and we couldn't manage to use VecFrameStack inside of the make_env() method that we've seen before)"
+    "It's hard to say whether it would perform better, but it seems to train significantly faster than the other approaches."
    ]
   }
  ],
